--- a/css/index.css
+++ b/css/index.css
@@ -10,3 +10,48 @@ p {
 #img {
     text-align : center;
 }
+
+img {
+    max-width: 100%;
+}
+
+.title{
+    padding: 0.2em 0.5em;
+    margin: 2em 0;
+    margin-bottom: 50px;
+    background: #d6ebff;
+    box-shadow: 0px 0px 0px 10px #d6ebff;
+    border: dashed 2px white;
+}
+
+.title p {
+    margin: 0; 
+    padding: 0;
+}
+
+#howto {
+    position: relative;
+    margin: 2em 0;
+    padding: 0.5em 1em;
+    border: solid 3px #d6ebff;
+}
+
+#howto .box-title {
+    position: absolute;
+    display: inline-block;
+    top: -27px;
+    left: -3px;
+    padding: 0 9px;
+    height: 25px;
+    line-height: 25px;
+    font-size: 17px;
+    background: #d6ebff;
+    color: #111111;
+    font-weight: bold;
+    border-radius: 5px 5px 0 0;
+}
+
+#howto p {
+    margin: 0; 
+    padding: 0;
+}
